<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group  android:id="@+id/group1">
        <item android:id="@+id/item1_tool_bar_mono"
            android:title="@string/item1_tool_bar_name">

            <menu>
                <item android:id="@+id/i0410"
                android:title="@string/geo_0410"/>
                <item android:id="@+id/i0005"
                    android:title="@string/geo_0005"/>
                <item android:id="@+id/i0291"
                    android:title="@string/geo_0291"/>
            </menu>

        </item>

        <item android:id="@+id/item2_tool_mono"
            android:title="@string/item2_tool_bar_name">
        <menu>
            <item android:id="@+id/i0405"
                android:title="@string/star_0405"/>
            <item android:id="@+id/i0009"
                android:title="@string/star_0009"/>
            <item android:id="@+id/i0033"
                android:title="@string/star_0033"/>
        </menu>
        </item>

        <item android:id="@+id/item3_tool_mono"
            android:title="@string/item3_tool_bar_name">
        <menu>
            <item android:id="@+id/i0375"
                android:title="@string/mono_abs_0375"/>
            <item android:id="@+id/i0271"
                android:title="@string/mono_abs_0271"/>
            <item android:id="@+id/i0632"
                android:title="@string/mono_abs_0632"/>
        </menu>
    </item>
    </group>

    <group android:id="@+id/group2">

    <item android:id="@+id/item1_on_bb_colour"
        android:title="@string/item1_tool_bar_colour">

        <menu>
            <item android:id="@+id/i0153"
                android:title="@string/on_bb_0153"/>
            <item android:id="@+id/i0157"
                android:title="@string/on_bb_0157"/>
            <item android:id="@+id/i0161"
                android:title="@string/on_bb_0161"/>
        </menu>
    </item>

    <item android:id="@+id/item2_abs_colour"
        android:title="@string/item2_tool_bar_colour">

        <menu>
            <item android:id="@+id/i0122"
                android:title="@string/col_abs_0122"/>
            <item android:id="@+id/i0136"
                android:title="@string/col_abs_0136"/>
            <item android:id="@+id/i0166"
                android:title="@string/col_abs_0166"/>
        </menu>
    </item>

    <item android:id="@+id/item3_cfill_colour"
        android:title="@string/item3_tool_bar_colour">

        <menu>
            <item android:id="@+id/i0435"
                android:title="@string/col_fill_0435"/>
            <item android:id="@+id/i0438"
                android:title="@string/col_fill_0438"/>
            <item android:id="@+id/i0429"
                android:title="@string/col_fill_0429"/>
        </menu>
    </item>
    </group>



</menu>