<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radio_button_group"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <RadioButton
        android:checked="true"
        android:id="@+id/radio_1"
        android:text="@string/radio1_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RadioButton
        android:checked="true"
        android:id="@+id/radio_2"
        android:layout_marginTop="10dp"
        android:text="@string/radio2_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    </RadioGroup>

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_title"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:layout_marginTop="200dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/main_pickture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:scaleX="2"
        android:scaleY="2"
        android:src="@mipmap/ic_start_0614"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_title" />

    <TextView
        android:id="@+id/main_description"
        android:paddingHorizontal="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_descr"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="80dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_pickture" />







</androidx.constraintlayout.widget.ConstraintLayout>